--- a/TODO
+++ b/TODO
@@ -1,2 +1,1 @@
-- remove URL from metadata.json & only use PUBLIC_URL
-- require PUBLIC_URL for render
+- nothing until after more posts are written, fingers crossed!
